manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "myakscluster-098f"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "myakscluster-098f"
  template:
    metadata:
      labels:
        app: "myakscluster-098f"
    spec:
      containers:
        - name: "myakscluster-098f"
          image: "regwael.azurecr.io/myakscluster"
          ports:
          - containerPort: 80
