manifests/deployment-2.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "akss-2d1a"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "akss-2d1a"
  template:
    metadata:
      labels:
        app: "akss-2d1a"
    spec:
      containers:
        - name: "akss-2d1a"
          image: "kuberepodemo.azurecr.io/akss"
          ports:
          - containerPort: 80
