manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "akss-2d1a"
    labels:
        app: "akss-2d1a"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "akss-2d1a"
